--- a/src/Microsoft.ServiceFabric.Data.Indexing.Memory.Test/Microsoft.ServiceFabric.Data.Indexing.Memory.Test.csproj
+++ b/src/Microsoft.ServiceFabric.Data.Indexing.Memory.Test/Microsoft.ServiceFabric.Data.Indexing.Memory.Test.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8A935018-BCBD-43F7-BFA8-AEE40CEA5C69}</ProjectGuid>
+    <ProjectGuid>{ED08DBC1-203E-4645-9395-DD4554265E3B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Microsoft.ServiceFabric.Data.Indexing.Persistent.Test</RootNamespace>
-    <AssemblyName>Microsoft.ServiceFabric.Data.Indexing.Persistent.Test</AssemblyName>
+    <RootNamespace>Microsoft.ServiceFabric.Data.Indexing.Memory.Test</RootNamespace>
+    <AssemblyName>Microsoft.ServiceFabric.Data.Indexing.Memory.Test</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -87,20 +87,15 @@
     <Reference Include="System.ServiceModel" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FilterableIndexTests.cs" />
-    <Compile Include="IndexExtensionsTests.cs" />
-    <Compile Include="Models\Address.cs" />
-    <Compile Include="Models\Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SearchableIndexTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Microsoft.ServiceFabric.Data.Indexing.Persistent\Microsoft.ServiceFabric.Data.Indexing.Persistent.csproj">
-      <Project>{505134be-cf41-4b0f-97a4-bd60edb9c242}</Project>
-      <Name>Microsoft.ServiceFabric.Data.Indexing</Name>
+    <ProjectReference Include="..\Microsoft.ServiceFabric.Data.Indexing.Memory\Microsoft.ServiceFabric.Data.Indexing.Memory.csproj">
+      <Project>{ac93e4de-f04d-4571-9fb7-43d8bb267a7d}</Project>
+      <Name>Microsoft.ServiceFabric.Data.Indexing.Memory</Name>
     </ProjectReference>
     <ProjectReference Include="..\Microsoft.ServiceFabric.Data.Mocks\Microsoft.ServiceFabric.Data.Mocks.csproj">
       <Project>{3d542fcd-a322-437c-8834-7781d963caf5}</Project>
