--- a/src/Microsoft.ServiceFabric.Data.Indexing.Persistent/Microsoft.ServiceFabric.Data.Indexing.Persistent.csproj
+++ b/src/Microsoft.ServiceFabric.Data.Indexing.Persistent/Microsoft.ServiceFabric.Data.Indexing.Persistent.csproj
@@ -85,6 +85,7 @@
     <Compile Include="IndexExtensions.cs" />
     <Compile Include="IReliableIndexedDictionary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReliableCollectionExtensions.cs" />
     <Compile Include="ReliableIndexedDictionary.cs" />
     <Compile Include="SearchableIndex.cs" />
   </ItemGroup>
