--- a/src/Microsoft.ServiceFabric.Data.Indexing.Persistent/packages.config
+++ b/src/Microsoft.ServiceFabric.Data.Indexing.Persistent/packages.config
@@ -4,4 +4,5 @@
   <package id="Microsoft.ServiceFabric.Data" version="2.8.232" targetFramework="net461" />
   <package id="Microsoft.ServiceFabric.Diagnostics.Internal" version="2.8.232" targetFramework="net461" />
   <package id="Microsoft.ServiceFabric.Services" version="2.8.232" targetFramework="net461" />
+  <package id="System.Linq.Dynamic" version="1.0.7" targetFramework="net461" />
 </packages>
