--- a/src/Microsoft.ServiceFabric.Data.Indexing.Persistent.Test/Microsoft.ServiceFabric.Data.Indexing.Persistent.Test.csproj
+++ b/src/Microsoft.ServiceFabric.Data.Indexing.Persistent.Test/Microsoft.ServiceFabric.Data.Indexing.Persistent.Test.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Models\Address.cs" />
     <Compile Include="Models\Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReliableCollectionExtensions.cs" />
     <Compile Include="SearchableIndexTests.cs" />
   </ItemGroup>
   <ItemGroup>
